@@ -2,6 +2,8 @@ Revision history for Perl module Getopt::Lucid
 
 {{$NEXT}}
 
+    - fixed validation() to make hashref argument actually optional like
+      the documentation says it is [rt.cpan.org #74269]
     - fixed typos in Pod
 
 1.00      2011-12-10 23:32:42 EST5EDT
